# piecemealpl

./: .gitattributes  .gitignore  LICENSE  README.md  README_uk.md  calc.fsx  meassure.ps1  measure.ps1
.github/workflows/: build.yml
.template/c/: main.c
.template/go/: go.mod  main.go
archivefile/c/: CMakeLists.txt  main.c
archivefile/go/: go.mod  main.go
archivefile/naot/: Program.cs
archivefile/rust/: Cargo.toml
archivefile/rust/src/: main.rs
arrayinit/c/: CMakeLists.txt  main.c
arrayinit/go/: go.mod  main.go
arrayinit/naot/: Program.cs
arrayinit/rust/: Cargo.toml
arrayinit/rust/src/: main.rs
baseline/c/: CMakeLists.txt
baseline/naot/: Program.cs
cmdlineargs/c/: CMakeLists.txt  main.c
cmdlineargs/go/: go.mod  main.go
cmdlineargs/naot/: Program.cs
cmdlineargs/rust/: Cargo.toml
cmdlineargs/rust/src/: main.rs
cmdlineargs2/c/: CMakeLists.txt  main.c
cmdlineargs2/go/: go.mod  main.go
cmdlineargs2/naot/: Program.cs  cmdlineargs2.csproj
cmdlineargs2/rust/: Cargo.toml
cmdlineargs2/rust/src/: main.rs
createfile/c/: CMakeLists.txt  main.c
createfile/go/: go.mod  main.go
createfile/naot/: Program.cs
createfile/rust/: Cargo.toml
createfile/rust/src/: main.rs
parse_float/c/: CMakeLists.txt  main.c
parse_float/go/: go.mod  main.go
parse_float/naot/: Program.cs
parse_float/rust/: Cargo.toml
parse_float/rust/src/: main.rs
printline/c/: CMakeLists.txt  main.c
printline/go/: go.mod
printline/rust/: Cargo.toml
proxycall/c/: CMakeLists.txt  main.c  proxy.c
proxycall/go/: go.mod  main.go
proxycall/go/basefun/: basefun.go
proxycall/go/proxy/: proxy.go
proxycall/naot/: BaseFun.cs  Proxy.cs
proxycall/rust/: Cargo.toml
proxycall/rust/src/: basefun.rs  main.rs  proxy.rs
proxycall_baseline/c/: CMakeLists.txt  basefun.c  main.c
proxycall_baseline/go/: go.mod  main.go
proxycall_baseline/naot/: Program.cs
proxycall_baseline/rust/: Cargo.toml
proxycall_baseline/rust/src/: main.rs
readfile/c/: CMakeLists.txt  main.c
readfile/go/: go.mod  main.go
readfile/naot/: Program.cs
readfile/rust/src/: main.rs
sdl2/c/: CMakeLists.txt  main.c
sdl2/go/: go.mod  main.go
sdl2/naot/: Program.cs  sdl2.csproj
sdl2/rust/: Cargo.toml  build.rs
sdl2/rust/src/: main.rs
strempty/c/: CMakeLists.txt  main.c
strempty/go/: go.mod  main.go
strempty/naot/: Program.cs
strempty/rust/: Cargo.toml
strempty/rust/src/: main.rs
strreverse/c/: CMakeLists.txt  main.c
strreverse/go/: go.mod  main.go
strreverse/naot/: Program.cs
strreverse/rust/: Cargo.toml
strreverse/rust/src/: main.rs
sum-strings/c/: CMakeLists.txt  main.c
sum-strings/rust/: Cargo.toml
sum-strings/rust/src/: main.rs
sum_strings/c/: CMakeLists.txt
sum_strings/go/: go.mod  main.go
sum_strings/naot/: Program.cs
sum_strings/rust/: Cargo.toml
template/c/: CMakeLists.txt
tolower/c/: CMakeLists.txt  main.c
tolower/go/: go.mod  main.go
tolower/naot/: Program.cs
tolower/rust/: Cargo.toml
tolower/rust/src/: main.rs
win32_button/c/: CMakeLists.txt  main.c
win32_button/go/: go.mod  main.go
win32_button/naot/: NativeMethods.txt  Program.cs  win32_button.csproj
win32_button/rust/: Cargo.toml
win32_button/rust/src/: main.rs
win32_window/c/: main.c
win32_window/go/: go.mod  go.sum  main.go
win32_window/naot/: NativeMethods.txt  Program.cs
win32_window/rust/src/: main.rs
